--- a/ProyectoWebConFlexbox/css/estilos.css
+++ b/ProyectoWebConFlexbox/css/estilos.css
@@ -16,97 +16,103 @@ a {
 .margen-interno {
     padding: 0 50px;
 }
-
-.header {
-    background: url(../imagenes/bg-2.jpg);
-    background-position: center;
-    background-attachment: contain;
-    background-size: cover;
-    display: flex;
-    flex-flow: column nowrap;
-
-}
-    .menu {
-        background: rgba(0,0,0,.1);
+    .header {
+        background: url(../imagenes/bg-2.jpg);
+        background-position: center;
+        background-attachment: contain;
+        background-size: cover;
         display: flex;
-        flex-flow: row nowrap;
-        height: 60px;
-        align-items: center;
-        border-bottom: 1px solid rgba(255, 255, 255, .5);
+        flex-flow: column nowrap;
     }
-        .logo {            
-            flex: 1 1 auto;                       
+        .menu {
+            background: rgba(0,0,0,.1);
+            display: flex;
+            flex-flow: row nowrap;
+            height: 60px;
+            align-items: center;
+            border-bottom: 1px solid rgba(255, 255, 255, .5);
         }
-            .logo a {
-                color: #fff;    
-                font-size: 30px;            
+            .logo {            
+                flex: 1 1 auto;                       
             }
-            .logo a:hover {
-                color: #343434;
+                .logo a {
+                    color: #fff;    
+                    font-size: 30px;            
+                }
+                .logo a:hover {
+                    color: #343434;
+                }
+            .nav {            
+                flex: 5 1 auto;            
             }
-        .nav {            
-            flex: 5 1 auto;            
+                .nav a {
+                    color: #fff;
+                    font-size: 11px;
+                    text-transform: uppercase;
+                    padding: 0 10px;
+                    letter-spacing: 2px;
+                }
+                .nav a:hover {
+                    color: #343434;
+                }
+            .social {            
+                flex: 1 1 auto;   
+                display: flex;         
+            }   
+                .social a {
+                    font-size: 18px;
+                    color: #fff;
+                    padding: 0 5px;
+                }
+                .social a:hover {
+                    color: #343434;
+                }    
+        .texto-principal {
+            /* background: #46cdcf; */
+            height: 580px;
+            display: flex;
+            align-items: center;
         }
-            .nav a {
+            h1 {
+                font-family: 'Lora', serif;
+                font-size: 21px;
                 color: #fff;
-                font-size: 11px;
-                text-transform: uppercase;
-                padding: 0 10px;
-                letter-spacing: 2px;
+                font-weight: 300;
+                text-align: center;
+                line-height: 1.6;            
             }
-            .nav a:hover {
-                color: #343434;
-            }
-        .social {            
-            flex: 1 1 auto;   
-            display: flex;         
-        }   
-            .social a {
-                font-size: 18px;
-                color: #fff;
-                padding: 0 5px;
-            }
-            .social a:hover {
-                color: #343434;
-            }
-    
-    .texto-principal {
-        /* background: #46cdcf; */
-        height: 580px;
+    .section {
+        background: #F7F7F7;
         display: flex;
-        align-items: center;
     }
-        h1 {
-            font-family: 'Lora', serif;
-            font-size: 21px;
+        .articulos {
+            background: #f7f7f7;
+            flex: 2 1 auto;
+            display: flex;
+            flex-flow: row wrap;
+        }
+            .article {
+            flex: 1 1 40%;
+            color: #444;
+            font-size: 13px;
+            letter-spacing: 1px;
+            margin: 10px 10px 0 0px;
+            flex: 1 1 45%;
+            background: #ececec;
+            }
+            .article img {
+                width: 100%;
+            }
+        .article a {
             color: #fff;
-            font-weight: 300;
-            text-align: center;
-            line-height: 1.6;            
+            font-size: 13px;
+            padding: 10px;
+            background: #000;
+            margin: 10px 0;
+            display: inline-block;
         }
-    
-
-.section {
-    background: #000;
-    display: flex;
-}
-    .articulos {
-        background: #f7f7f7;
-        flex: 2 1 auto;
-        display: flex;
-        flex-flow: row wrap;
-    }
-        .article {
-           flex: 1 1 40%;
-           color: #444;
-           font-size: 13px;
-           letter-spacing: 1px;
-           margin: 10px 10px 0 0px;
-           flex: 1 1 45%;
-           background: #ececec;
-        }
-        .article img {
-            width: 100%;
+        .article a:hover {
+            background: #546cc3;
         }
         h3 {
             color: #fff;
@@ -121,29 +127,52 @@ a {
             color: #fff;
         }
         .navegacion {
-            background: #f07b3f;   
+            background: #000;   
             flex: 1 1 100%;
+            margin: 10px 10px 0 0px;
         }
-    
+        .navegacion a {
+            color: #fff;
+            font-size: 11px;
+            text-transform: uppercase;
+            padding: 0 10px;
+            letter-spacing: 2px;
+        }    
     .aside {
-        background: #f67280;
-        flex: 1 1 auto;
+        /* background: #f73f52;*/
+        flex: 1 1 auto;            
+        margin: 10px 5px 10px 0;        
     }
-        .publicidad {
-            background: #c06c84;
+    .aside img {
+        width: 100%;
+    }
+    h4 {
+        background: #000;
+        color: #fff;
+        padding: 10px;
+        text-transform: uppercase;
+    }
+        .publicidad img {            
+            /*background: #ffea85;*/
         }
-
 .footer {
     background: #000;
     display: flex;
     justify-content: center;
+    margin-top: 10px;    
 }
     .pie {
-        background: #3490de;
-        width: 300px;        
+        /*background: #e6af2e;*/
+        text-align: center;               
     }
-
-@media all and (max-width: 800px){
+    .pie a {
+        color: #fff;
+        font-size: 11px;
+        text-transform: uppercase;
+        padding: 0 10px;
+        letter-spacing: 2px;
+    }
+@media all and (max-width: 1120px){
     .section {
         flex-direction: column;
     }
@@ -155,16 +184,44 @@ a {
         display: flex;
         justify-content: center;
     }
-}
-
-@media all and (max-width: 600px){
-    .articulos {
-        display: flex;
-        flex-direction: column;
-        
+    h1 {
+        font-size: 15px;
+    }
+    .texto-principal {
+        height: 450px;
     }
 }
-
+@media all and (max-width: 1120px){
+    .section {
+        flex-direction: column;
+    }
+    .menu {
+        flex-direction: column;
+        height: auto;
+    }
+    .aside {
+        display: flex;
+        justify-content: center;
+    }
+    h1 {
+        font-size: 15px;
+    }
+    .texto-principal {
+        height: 450px;
+    }
+}
+@media all and (max-width: 762px){
+    .articulos {        
+        flex-direction: column;        
+    }
+    h1 {
+        font-size: 15px;
+    }
+}
+@media all and (max-width: 650px){
+    .off{ display: none;}
+    .nav a{ font-size: 25px;}
+}
 @media all and (max-width: 400px){
     .aside {
         flex-direction: column;        
