--- a/TCyA/estilos.css
+++ b/TCyA/estilos.css
@@ -28,13 +28,17 @@ header .logo {
 
 nav ul li {
     display: inline-block;
-    margin: 0 20px;
-
+    margin: 0 20px; 
 }
 
 nav ul li a {
     text-decoration: none;
     color: #000;
+}
+
+nav ul li a:hover {    
+    color: #fff;
+    background-color: #2a7886;
 }
 
 header h1 {
