--- a/TCyA/estilos.css
+++ b/TCyA/estilos.css
@@ -13,12 +13,14 @@ body {
 .menu {
     background: #fff;
     padding: 9px 20px;
+    box-shadow: 0px 0px 10px #512b58;  
 }
 
 .menu .contenedor {
     display: flex;
     justify-content: space-between;    
     align-items: center;
+    
 }
 
 header .logo {
