--- a/TCyA/estilos.css
+++ b/TCyA/estilos.css
@@ -13,7 +13,7 @@ body {
 .menu {
     background: #fff;
     padding: 9px 20px;
-    box-shadow: 0px 0px 10px #512b58;  
+    box-shadow: 0px 0px 7px #512b58;  
 }
 
 .menu .contenedor {
@@ -24,34 +24,81 @@ body {
 }
 
 header .logo {
+    font-family: 'Rubik'; 
     font-size: 23px;
     font-weight: bold;
+    color: #512b58;      
 }
 
 nav ul li {
-    display: inline-block;
-    margin: 0 20px; 
+    display: inline-block;    
 }
 
 nav ul li a {
     text-decoration: none;
-    color: #000;
+    color: #2a7886;
+    padding: 10px 20px;
 }
 
 nav ul li a:hover {    
-    color: #fff;
-    background-color: #2a7886;
+    color: #512b58;
+    background-color: #f1f3f4;
+    border-radius: 5px;
 }
 
-header h1 {
+
+/* PRODUCTOS */
+
+#productos {
+    padding-top: 30px;
+
+}
+
+#productos h1 {
+    text-align: center;
     font-family: 'Rubik';
-    font-size: 42px;
-    text-shadow: 1px 2px 50px #000;    
-    justify-content: center;
+    font-size: 43px;
+    font-weight: bold;
+    color: #512b58;
+    letter-spacing: 7px;
+    margin: 0;    
+    margin-bottom: 30px;
 }
 
-header .contenedor {
+#productos p {
+    font-family: 'Open Sans';    
+    font-size: 15px;
+    color: #2a7886;
+    width: 73%;
+    margin: auto;
+    line-height: 30px;    
+    text-align: justify;
+}
+
+.contenedor-productos {
     display: flex;
-    
+    width: 88%;
+    margin: auto;
 }
 
+#productos h2 {
+    font-family: 'Open Sans';
+    font-size: 26px;
+    letter-spacing: 4px;
+    margin: 0;
+    text-align: center;
+    font-weight: 400;
+    margin-bottom: 16px;
+    color: #512b58;
+}
+
+#productos img {    
+    background-color: #79bac1;
+    background-size: cover;
+    display: flex;    
+    margin: auto;
+    width: 150px;
+    height: 150px;
+    border-radius: 75px;
+    margin-bottom: 20px;
+}
