--- a/TCyA/estilos.css
+++ b/TCyA/estilos.css
@@ -1,6 +1,6 @@
 body {
     padding: 0;
-    margin: 0;
+    margin: 0;    
     font-family: 'Poppins';
 }
 
@@ -42,7 +42,7 @@ nav ul li a {
 
 nav ul li a:hover {    
     color: #512b58;
-    background-color: #f1f3f4;
+    background-color: #79bac1;
     border-radius: 5px;
 }
 
@@ -51,6 +51,7 @@ nav ul li a:hover {
 
 #productos {
     padding-top: 30px;
+    padding-bottom: 30px;
 
 }
 
@@ -62,7 +63,8 @@ nav ul li a:hover {
     color: #512b58;
     letter-spacing: 7px;
     margin: 0;    
-    margin-bottom: 30px;
+    margin-top: 25px;
+    margin-bottom: 55px;
 }
 
 #productos p {
@@ -79,6 +81,7 @@ nav ul li a:hover {
     display: flex;
     width: 88%;
     margin: auto;
+    margin-bottom: 60px;
 }
 
 #productos h2 {
@@ -88,17 +91,43 @@ nav ul li a:hover {
     margin: 0;
     text-align: center;
     font-weight: 400;
-    margin-bottom: 16px;
+    margin-bottom: 28px;
     color: #512b58;
 }
 
 #productos img {    
-    background-color: #79bac1;
-    background-size: cover;
+    /*background-color: #512b58;*/
+    background-size: contain;
     display: flex;    
     margin: auto;
     width: 150px;
     height: 150px;
+    max-width: 150px;
     border-radius: 75px;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
+}
+
+/*#productos .dos img {
+    background-color: #fff !important;
+    width: 100px !important;
+    height: 100px !important;
+}*/
+
+/* FOOTER */
+
+footer {
+    background: #2a7886;
+    color: #f1f3f4;
+    margin: auto;
+    padding: 9px;
+}
+
+footer .contenedor {
+    display: block;
+    align-items: center;
+}
+
+footer p {
+    text-align: center;
+    line-height: 15px;
 }
