--- a/TCyA/estilos.css
+++ b/TCyA/estilos.css
@@ -1,7 +1,7 @@
 body {
     padding: 0;
     margin: 0;    
-    font-family: 'Poppins';
+    font-family: 'Poppins';   
 }
 
 .contenedor {
@@ -38,20 +38,23 @@ nav ul li a {
     text-decoration: none;
     color: #2a7886;
     padding: 10px 20px;
+    transition-delay: .3s;
 }
 
 nav ul li a:hover {    
-    color: #512b58;
-    background-color: #79bac1;
+    padding: 10px 20px;
+    color: #512b58;   
+    border: 1px solid #2a7886;
     border-radius: 5px;
+    transition-delay: .3s;
 }
 
 
 /* PRODUCTOS */
 
 #productos {
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 10px;
+    padding-bottom: 27px;
 
 }
 
@@ -62,9 +65,6 @@ nav ul li a:hover {
     font-weight: bold;
     color: #512b58;
     letter-spacing: 7px;
-    margin: 0;    
-    margin-top: 25px;
-    margin-bottom: 55px;
 }
 
 #productos p {
@@ -84,6 +84,7 @@ nav ul li a:hover {
     margin-bottom: 60px;
 }
 
+
 #productos h2 {
     font-family: 'Open Sans';
     font-size: 26px;
@@ -96,38 +97,44 @@ nav ul li a:hover {
 }
 
 #productos img {    
-    background-color: #fff;
+    background-color: #512b58;
+    object-fit: contain;
+    display: flex;  
+    margin: auto;      
     background-size: contain;
-    display: flex;    
-    margin: auto;
     width: 150px;
     height: 150px;
-    max-width: 150px;
-    border-radius: 75px;
-    margin-bottom: 25px;
-}
+    resize: none; 
+    padding: 20px; 
+    border-radius: 100%;
+    margin-bottom: 25px;   
+    transform: rotate(0deg);
+    transition: 0.7s; 
+} 
 
-/*#productos .dos img {
-    background-color: #fff !important;
-    width: 100px !important;
-    height: 100px !important;
-}*/
+#productos img:hover {
+    transform: rotate(360deg);
+    transition: 0.7s;        
+}
+ 
+#uno, #dos, #tres {
+    box-shadow: 30px 40px 40px -44px rgba(0, 0, 0, 0.3);
+}
 
 /* FOOTER */
 
 footer {
-    background: #2a7886;
-    color: #f1f3f4;
+    background: linear-gradient(to bottom, #79bac1, #f1f3f4);    
     margin: auto;
-    padding: 9px;
+    padding: 5px;
 }
 
-footer .contenedor {
-    display: block;
+footer .contenedor {    
     align-items: center;
 }
 
 footer p {
     text-align: center;
+    color: #512b58;
     line-height: 15px;
 }
