--- a/ATyC/estilos.css
+++ b/ATyC/estilos.css
@@ -8,11 +8,11 @@ body {
     width: 90%;
     max-width: 1280px;
     margin: auto;
+    padding: left;
 }
 
 .menu {
-    background: #fff;
-    /*padding: 9px 20px;*/
+    background: #fff;    
     padding: 9px 0;
     box-shadow: 0px 0px 15px #512b58;  
 }
@@ -20,8 +20,7 @@ body {
 .menu .contenedor {
     display: flex;
     justify-content: space-between;    
-    align-items: center;
-    
+    align-items: center;    
 }
 
 header .logo {
