--- a/ATyC/estilos.css
+++ b/ATyC/estilos.css
@@ -168,33 +168,89 @@ footer a {
 .accesorios {
     margin-top: 40px;
     width: 100%;
-    max-width: 1920px;
-    margin: auto;
+    max-width: 1920px;    
     padding: left;
     display: flex;
-    justify-content: space-between; 
-    
+    justify-content: space-between;     
 }
 
 .contenedor-mapa {    
     width: 100%;
-    max-width: 400px;      
-    margin: 0 40px 0 0;
-    background-color: lightgray;
-    
+    max-width: 400px; 
+    max-height: 400px;
+    margin: 85px 40px 0 0;
+    background-color: #f1f3f4;
+}
 
+.contenedor-mapa h3 {
+    color: #512b58;
 }
 
 .contenedor-accesorios {    
     width: 100%;
     max-width: 1480px;
     height: 400px;       
-    background-color: lightblue;
+    background-color: #f1f3f4;    
 }
 
-h2 {
+.accesorios-contenedor h2 {
     margin: auto;
     text-align: center;
     padding-top: 10px;
-    padding-bottom: 22px;
+    padding-bottom: 10px; 
+    color: #512b58;
+}
+
+.accesories {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+ }
+
+ .accesorio {
+    height: 400px;
+    width: 400px;
+    background-color: #f1f3f4;
+    margin: 30px 30px;
+    flex-wrap: wrap;
+ }
+
+ .accesorio img {    
+    object-fit: contain;
+    display: flex;  
+    margin: auto;      
+    background-size: contain;
+    width: 100px;
+    height: 100px;
+    resize: none; 
+    padding: 0;     
+} 
+
+.accesorio p {
+    text-align: justify;
+    color: #79bac1;
+    margin-bottom: 45px;
+
+}
+
+.accesorio h4 {
+    text-align: center;
+    color: #2a7886;
+}
+
+.accesorio a {    
+    text-decoration: none;    
+    justify-content: center;    
+    padding: 10px 20px;
+    color: #f1f3f4;
+    background-color: #79bac1;
+    border-radius: 2px;
+    margin: 95px; 
+    -webkit-box-shadow: 2px 2px 5px 0px rgba(81,43,88,1);
+    -moz-box-shadow: 2px 2px 5px 0px rgba(81,43,88,1);
+    box-shadow: 2px 2px 5px 0px rgba(81,43,88,1);
+}
+
+.accesorio a:hover {        
+    background-color: #512b58;
 }
